--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notes-app-back-end",
+  "name": "open-music",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.10",
+    "@hapi/jwt": "^3.2.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
     "nanoid": "^3.1.20",
